[package]
name = "phase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "phase"
path = "examples/phase/phase.rs"

[[example]]
name = "phase_dec"
path = "examples/phase_dec/phase_dec.rs"

[[example]]
name = "phase_noise"
path = "examples/phase_noise/phase_noise.rs"

[dependencies]
libm = "0.2.8"
plotters = "0.3.5"
