[package]
name = "phase"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "phase"
path = "examples/phase/phase.rs"

[[example]]
name = "phase_dec"
path = "examples/phase_dec/phase_dec.rs"

[[example]]
name = "phase_noise"
path = "examples/phase_noise/phase_noise.rs"

[[example]]
name = "phase_noise_dec"
path = "examples/phase_noise_dec/phase_noise_dec.rs"

[dependencies]
csv = "1.3.0"
libm = "0.2.8"
plotters = "0.3.5"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
